Adds Pylon command that adds pylon effects to the player.